force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__AllowedHostingContext__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__AllowedHostingContext__c</fullName>
    <description>Where this form can be hosted and accessed. Controls form availability across different Salesforce context.</description>
    <inlineHelpText>Select where this form can be hosted and accessed</inlineHelpText>
    <label>Allowed Hosting Context</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DigitalExperience</fullName>
            </value>
            <value>
                <fullName>LightningExperience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>