force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__API_Version__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__API_Version__c</fullName>
    <label>Schema API Version</label>
    <length>8</length>
    <type>Text</type>
</CustomField>