force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__Disable_Lookup_Visible_Warning__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Disable_Lookup_Visible_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>suppress lookup visibility warning</description>
    <label>Disable Lookup Visible Warning</label>
    <type>Checkbox</type>
</CustomField>