force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__EmailDraft__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__EmailDraft__c</fullName>
    <description>Text for Email Template</description>
    <inlineHelpText>Text for Email Template</inlineHelpText>
    <label>EmailDraft</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>