force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__EnableEmailNotifications__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__EnableEmailNotifications__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Email notifications</description>
    <label>EnableEmailNotifications</label>
    <type>Checkbox</type>
</CustomField>