force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__ExportLinksData__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__ExportLinksData__c</fullName>
    <label>ExportLinksData</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>