force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__Fast_Prefill_Info__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Fast_Prefill_Info__c</fullName>
    <label>Fast Prefill Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>