force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__Fields_Object_xml__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Fields_Object_xml__c</fullName>
    <label>Fields Object xml</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>