force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__Form_Final_Html__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Form_Final_Html__c</fullName>
    <label>Form Final Html</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>