force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__Form_ID__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Form_ID__c</fullName>
    <description>for track of the Form ID separately for Object</description>
    <label>Form ID</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>