force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__Form_Options__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Form_Options__c</fullName>
    <label>Form Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>