force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__Form_Version__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Form_Version__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Deprecated</description>
    <label>Deprecated</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>