force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__FormNotification__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__FormNotification__c</fullName>
    <description>This field is used for controlling notification into the form. This is not
            related to EmailNotification.</description>
    <label>FormNotification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>hasPrefillEnabled</fullName>
            </value>
            <value>
                <fullName>hasBrokenImageField</fullName>
            </value>
            <value>
                <fullName>hasBrokenImageInStyle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>