force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__FormNotificationDismissed__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__FormNotificationDismissed__c</fullName>
    <description>Dismissed notification to be added into FormNotification Field. We would not
            process it again if the Notification is here.</description>
    <label>FormNotificationDismissed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>hasPrefillEnabled</fullName>
            </value>
            <value>
                <fullName>hasBrokenImageField</fullName>
            </value>
            <value>
                <fullName>hasBrokenImageInStyle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>