force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__FormVersion__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__FormVersion__c</fullName>
    <description>Version of the form (v1 / null for legacy, v2 for new forms)</description>
    <label>Form Version</label>
    <length>8</length>
    <type>Text</type>
</CustomField>