force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__HasEmailDraft__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__HasEmailDraft__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email has draft</description>
    <inlineHelpText>Email has  draft</inlineHelpText>
    <label>HasEmailDraft</label>
    <type>Checkbox</type>
</CustomField>