force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__Hidden_Related_Object__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Hidden_Related_Object__c</fullName>
    <label>Hidden Related Object</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>