force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__JSCode__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__JSCode__c</fullName>
    <description>Javascript text</description>
    <label>JSCode</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>