force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__PaymentJSAcceptance__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__PaymentJSAcceptance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Payment JS Acceptance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>