force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__PaymentJSReason__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__PaymentJSReason__c</fullName>
    <label>Payment JS Acceptance Reason</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>