force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__PDF_Confirmation_Files__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__PDF_Confirmation_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable/Disable - Send Form PDF File to Salesforce Files</description>
    <label>PDF Confirmation Files</label>
    <type>Checkbox</type>
</CustomField>