force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__PDF_Confirmation_Record__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__PDF_Confirmation_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDF Confirmation Record</label>
    <type>Checkbox</type>
</CustomField>