force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__PDF_Name__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__PDF_Name__c</fullName>
    <label>PDF Name</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>