force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__PDF_Send_To__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__PDF_Send_To__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDF Send To</label>
    <type>Checkbox</type>
</CustomField>