force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__Prefill_Key__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Prefill_Key__c</fullName>
    <label>Prefill Key</label>
    <type>TextArea</type>
</CustomField>