force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__Prefill_URL__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Prefill_URL__c</fullName>
    <label>Prefill URL</label>
    <type>Url</type>
</CustomField>