force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__Related_Object_Info__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Related_Object_Info__c</fullName>
    <label>Related Object Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>