force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__Theme__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Theme</label>
    <referenceTo>VisualAntidote__Form_Style__c</referenceTo>
    <relationshipLabel>Templates</relationshipLabel>
    <relationshipName>Templates</relationshipName>
    <type>Lookup</type>
</CustomField>