force-app/main/default/objects/VisualAntidote__Previous_Form__c/fields/VisualAntidote__TrackingEnabled__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__TrackingEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Tracking Enabled</description>
    <label>TrackingEnabled</label>
    <type>Checkbox</type>
</CustomField>